# BenchDiff

./: .gitignore  LICENSE  README.md  bench_compare  cli.py  color_utils.py  compare.py  main.py  pyproject.toml  report.py
demo/: run_compare_O2_vs_O3.sh  run_demo.sh
demo/cpp_bench/: CMakeLists.txt  bench_demo.cpp
demo/cpp_bench/build_O2/: bench_demo
demo/cpp_bench/build_O3/: bench_demo
docs/: README.md  development.md  usage.md
examples/: baseline.json  current.json
src/benchdiff/: __init__.py  cli.py  color_utils.py  compare.py  report.py
