[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchdiff"
version = "0.1.0"
description = "Ultra-concise performance regression reporting for Google Benchmark traces"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [{ name = "sbstndbs" }]
keywords = ["benchmark", "performance", "regression", "google-benchmark", "ci", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Benchmark",
]

[project.scripts]
benchdiff = "benchdiff.cli:run"

[project.urls]
Homepage = "https://github.com/sbstndb/BenchDiff"
Repository = "https://github.com/sbstndb/BenchDiff"
Issues = "https://github.com/sbstndb/BenchDiff/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/LICENSE",
    "/README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/benchdiff"]
